Sockets technically working, many more issues to iron out

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "uglify-js": "*",
     "mocha": "*",
     "winston": "*",
-    "socket.io": "*"
+    "socket.io": "*",
+    "socket.io-client" : "*"
   }
 }
